<resources>
    <string name="app_name">AndroidWidgets</string>
    <string name="_1">1</string>
    <string name="button_textview_edittext_kullanimi">Button - TextView - Edittext Kullanimi</string>
    <string name="_2">2</string>
    <string name="androidwidgets">AndroidWidgets</string>
    <string name="switchbutton_ve_tooglebutton_kullanimi">SwitchButton ve ToogleButton Kullanimi</string>
    <string name="switchbutton">SwitchButton</string>
    <string name="tooglebutton">ToogleButton</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="birsey_yaziniz">Birsey yaziniz...</string>
    <string name="button">Button</string>
    <string name="_3">3</string>
    <string name="radiobutton_ve_checkbox">RadioButton ve CheckBox</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="hangi_dilleri_biliyorsunuz">Hangi dilleri biliyorsunuz?</string>
    <string name="hangi_takimi_tutuyorsun">Hangi Takimi Tutuyorsun?</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="barcelona">Barcelona</string>
    <string name="bas_bakalim">Bas Bakalim</string>
    <string name="basa_donmek_icin_butona_bas">Basa Donmek Icin Butona Bas</string>
    <string name="button2">Button</string>
    <string name="textview">TextView</string>
    <string name="heran_degisebilir">Heran Degisebilir.</string>
    <string name="bas">Bas</string>
    <string name="_4">4</string>
    <string name="progressbar_slider_ve_ratingbar">ProgressBar,Slider ve RatingBar</string>
    <string name="_5">5</string>
    <string name="web_view_kullanimi">Web View Kullanimi</string>
    <string name="imageview_kullanimi">ImageView Kullanimi</string>
    <string name="_6">6</string>
    <string name="resim2">RESIM2</string>
    <string name="resim1">RESIM1</string>
    <string name="todo">TODO</string>
    <string name="_7">7</string>
    <string name="videoview_kullanimi">VideoView Kullanimi</string>
    <string name="basla">BASLA</string>
    <string name="dur">DUR</string>
    <string name="bos">bos</string>
    <string name="_8">8</string>
    <string name="scrollview_kullanimi">ScrollView Kullanimi</string>
    <string name="selam">Selam</string>
    <string name="_9">9</string>
    <string name="saat_giriniz">Saat Giriniz</string>
    <string name="tarih_giriniz">Tarih Giriniz</string>
    <string name="timevedate_picker_kullanimi">TimeveDate Picker Kullanimi</string>
    <string name="spinnerkullanimi">SpinnerKullanimi</string>
    <string name="goster">Goster</string>
    <string name="_10">10</string>
</resources>