<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/androidWidgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/androidwidgets"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/androidWidgets"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/button1"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/button1"
        android:text="@string/_2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/button3"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/button3"
        android:text="@string/_3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/button5"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/button5"
        android:text="@string/_4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@id/button7"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/button7"
        android:text="@string/_5"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_6"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        />

    <Button
        android:id="@+id/button10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_7"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_8"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/_9"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/button13"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:text="@string/_10"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        android:layout_marginStart="10dp"/>








</androidx.constraintlayout.widget.ConstraintLayout>