<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToggleButtonveSwitch.ToggleButtonveSwitch">

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchbutton_ve_tooglebutton_kullanimi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintStart_toStartOf="@id/text3"
        app:layout_constraintEnd_toEndOf="@id/text3"
        android:layout_marginTop="50dp"
        android:text="@string/switchbutton"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/togglebutton"
        app:layout_constraintEnd_toEndOf="@id/switch1"
        app:layout_constraintStart_toStartOf="@id/switch1"
        app:layout_constraintTop_toBottomOf="@id/switch1" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tooglebutton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@id/toggleButton"
        app:layout_constraintStart_toStartOf="@id/toggleButton"
        app:layout_constraintTop_toBottomOf="@id/toggleButton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintTop_toBottomOf="@id/text4"
        app:layout_constraintStart_toStartOf="@id/text4"
        app:layout_constraintEnd_toEndOf="@id/text4"
        android:layout_marginTop="50dp"
        android:backgroundTint="#2196F3"/>

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintEnd_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button4"
        android:layout_marginTop="50dp"
        android:text="" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text5"
        app:layout_constraintEnd_toEndOf="@id/text5"
        app:layout_constraintTop_toBottomOf="@id/text5"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/text6"
        app:layout_constraintEnd_toEndOf="@id/text6"
        app:layout_constraintTop_toBottomOf="@id/text6"
        android:layout_marginTop="5dp" />


</androidx.constraintlayout.widget.ConstraintLayout>